fixed border on mobile devices

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -8,7 +8,8 @@
 
 @media (max-width:45rem){
     .app{
-        width: 25rem;
+        width: 100%;
+        height: 100%;
         margin: 1rem auto;
     }
 }
